--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,6 @@ dist
 build
 eggs
 parts
-bin
 var
 sdist
 develop-eggs
@@ -48,3 +47,6 @@ nosetests.xml
 # virtualenvs
 venv-*/
 test/
+
+# don't ignore bin/ but do ignore bin/pubconf.py
+bin/pubconf.py
