--- a/src/data/_sponsors.yaml
+++ b/src/data/_sponsors.yaml
@@ -18,6 +18,12 @@
   link: http://www.speedycloud.cn/
   intro: "SpeedyCloud是业界领先的云计算服务提供商迅达云成公司旗下品牌,专注于为企业提供互联网及企业IT相关基础设施云服务. 公司成员绝大多数来自于蓝汛,世纪互联等IT运维服务型上市企业, 利用最新的云计算及互联网技术帮助客户迅速扩展在线业务."
   intro_en: "SpeedyCloud is the IaaS brand owned by Beijing SpeedyCloud Technology Co., Ltd.,, who is one of the leaders in cloud industry.The company was setup in 2012, with the capital of 10 million RMB invested all by ourselves.Being the general solution provider,  our focus is to provide IaaS for Internet and enterprises companies. Most of the team came from public IT operating and service companies like ChinaCache, 21ViaNet, etc. We are helping our customers with the most cutting-edge cloud computing technologies to expand their online businesses. "
+-
+  level_platinum: 1
+  level: platinum
+  logo: http://pyconcn.qiniudn.com/zoomquiet/stuff14/logo/jiankongbao-logo.png?imageView2/2/w/210
+  link: http://www.jiankongbao.com/
+  intro: "云智慧(北京)科技有限公司成立于2009年,是国内领先的应用性能管理服务商. 基于大数据分析,为企业级用户提供全面,专业的端到端的应用性能管理(End To End Application Performance Management)解决方案. Cloudwise SaaS APM累计已为电子商务,移动互联网,IaaS云服务,在线游戏,教育医疗等行业的几十万用户提供了前瞻性的智慧性能管理服务,是新一代应用性能管理(APM)的领导者. "
 #########################################
 #   黄金级
 #########################################
@@ -63,6 +69,18 @@
   link: https://www.upyun.com/index.html
   intro: "又拍云存储是杭州又拍云科技有限公司旗下项目,成立于2005年6月,前期主要为又拍网,又拍图片管家提供图片云存储／云计算服务,于2010年2月对所有用户开放使用."
   intro_en: "upyun cloud storage is hangzhou youpai technology co., LTD's project, was founded in June 2005, the early main take yupoo.com, and v.yupoo.com , in February 2010 is open to all users to use."
+-
+  level_gold: 1
+  level: gold
+  logo: http://pyconcn.qiniudn.com/zoomquiet/stuff14/logo/DeepGlint-logo.png?imageView2/2/w/120
+  link: http://www.deepglint.com/
+  intro: "深瞳消费者行为分析系统;在电商大行其道的今天,我们为传统零售商提供更精准的数据和更加客观的消费者行为分析,使得零售商能够为消费者提供更加精准高效的服务. 深瞳无人监控安防系统;当危险临近时,我们不再需要靠运气被中控室里的保安在几万路视频里正好看到,深瞳系统的 三维传感器将像机器人一样,实时的代替人'看'着每一个场景里的一举一动"
+-
+  level_gold: 1
+  level: gold
+  logo: http://pyconcn.qiniudn.com/zoomquiet/stuff14/logo/knownsec_160.png
+  link: http://www.knownsec.com
+  intro: "北京知道创宇信息技术有限公司是国内最早提出网站安全云监测及云防御的高新企业,始终致力于为客户提供基于云技术支撑的下一代Web安全解决方案. 知道创宇总部设在北京,在香港,上海,广州,成都设有分公司,客户及合作伙伴来自中国,美国,日本,韩国等. 凭借强大的云安全技术与产品的高可用性,易管理性,合规性和业务连续性,以及动态保障关键Web数据资产安全的能力,帮助用户应对变化多端的互联网安全威胁,赢得了企业,政府与公共机构的青睐. 知道创宇安全实验室在零日安全威胁与云安全技术方面的研究得到了业内的广泛认同并享有极高知名度. "
 -
   level_gold: 1
   level: gold
