--- a/src/data/_schedule_beijing.yaml
+++ b/src/data/_schedule_beijing.yaml
@@ -80,7 +80,7 @@ lt:
     speaker: 梁杰
     speaker_en: 梁杰 (Liang Jie)
     preview: 开源大家都听过，但是真正参与到开源项目中的程序员却少之又少。在这个快速演讲中我会介绍如何参与开源项目，让每个程序员都能更快地得到提升。
-    preview_en: 开源大家都听过，但是真正参与到开源项目中的程序员却少之又少。在这个快速演讲中我会介绍如何参与开源项目，让每个程序员都能更快地得到提升。
+    preview_en: It is hard for most of us to take part in open source projects, although we have heard of them too many times. This lecture will introduce how to join one open source project and get yourself improved.
   - time: ""
     topic: ""
     speaker: 屈晓龙
