--- a/src/data/_schedule_beijing.yaml
+++ b/src/data/_schedule_beijing.yaml
@@ -115,3 +115,11 @@ lt:
     preview: Python在机器人技术中的优势与应用
     preview_en: The advantages and application of Python in robot field
 
+  - time: "17:35"
+    topic: "TBD"
+    speaker: 罗志城
+    speaker_en: 罗志城 (Luo Zhicheng)
+    preview: "如何使用Python快速搭建移动app的用户行为数据收集统计平台以及该平台面对不断增加的用户量如何提升的平台稳定性,可扩展性的实践经验."
+    preview_en: "How to setup a mobile app statistics collection platform using Python. And how to improve the platform in order to make it scalable and stable, to meet the increasing customers."
+
+
