追加 伙伴级别 并增补 云梯和 sf.gg

--- a/src/data/_message.yaml
+++ b/src/data/_message.yaml
@@ -164,6 +164,8 @@ sponsors_silver: 白银
 sponsors_silver_en: Silver
 sponsors_bronze: 青铜
 sponsors_bronze_en: Bronze
+sponsors_partner: 合作伙伴
+sponsors_partner_en: Partner
 #########################################
 # volunteers
 #########################################
