--- a/src/data/_sponsors.yaml
+++ b/src/data/_sponsors.yaml
@@ -1,4 +1,15 @@
 #########################################
+#   合作伙伴
+#########################################
+-
+  level_partner: 1
+  level: partner
+  logo: http://pyconcn.qiniudn.com/zoomquiet/stuff14/logo/sf-logo-cmyk.png?imageView2/2/w/200
+  link: http://segmentfault.com/
+  intro: "egmentFault 是中国领先的开发者社区。经过两年多年的发展，已经
+聚集了十多万开发者。我们的目标是为中文开发者提供一个最纯粹的
+技术交流平台，一起创造属于开发者的时代！"
+#########################################
 #   钻石级
 #########################################
 -
