--- a/src/data/_agenda.yaml
+++ b/src/data/_agenda.yaml
@@ -11,24 +11,41 @@ beijing:
     - time: "09:00"
       topic: "签到 & 开场"
       topic_en: "Check-in & Opening"
-    - { time: "", speaker: id_zhengkun }
-    - { time: "", speaker: id_xutao }
+    - { time: "09:45", speaker: id_xutao }
+    - { time: "10:25", speaker: id_zhengkun }
+    - { time: "11:05", speaker: id_dongwei }
+    - { time: "11:45", speaker: id_gaochitao }
   noon:
     - time: "12:00"
       topic: 午餐+合照
       topic_en: Lunch + Photo
   afternoon:
-    - { time: "13:30", speaker: id_gaochitao }
+    - { time: "13:10", speaker: id_wangwei }
+    - { time: "13:50", speaker: id_laike9m }
     - { time: "14:30", speaker: id_weizeren }
-    - { time: "", speaker: id_chenjian }
-    - { time: "", speaker: id_linshuai }
+    - { time: "15:00", speaker: id_linshuai }
+    - time: "15:10 "
+      topic: 间歇
+      topic_en: Intermission
   lightening_talks:
-    - { time: "", speaker: id_likuan }
-    - { time: "", speaker: id_liangjie }
-    - { time: "", speaker: id_quxiaolong }
-    - { time: "", speaker: id_quchifeng }
-    - { time: "", speaker: id_yanglin }
-    - { time: "", speaker: id_luozhicheng }
+    - { time: "15:20", speaker: id_quchifeng }
+    - { time: "15:30", speaker: id_chenjian }
+    - { time: "15:40", speaker: id_likuan }
+    - { time: "15:50", speaker: id_liangjie }
+    - { time: "16:00", speaker: id_quxiaolong }
+    - time: "16:10 "
+      topic: 间歇
+      topic_en: Intermission
+    - { time: "16:20", speaker: id_yanglin }
+    - { time: "16:30", speaker: id_binux }
+    - { time: "16:40", speaker: id_liuxiaoming }
+    - { time: "16:50", speaker: id_luozhicheng }
+    - { time: "17:00", speaker: id_kanglei }
+    - time: "17:10 "
+      topic: 间歇
+      topic_en: Intermission
+    - time: "17:20"
+      topic: TBD
 
 shanghai:
   address: 上海市浦东新区博云路2号
