解决自动部署失败问题, 启用 bin/app.py -g  来渲染

--- a/src/data/_agenda.yaml
+++ b/src/data/_agenda.yaml
@@ -1,3 +1,11 @@
+####################################################################
+#    ____  _
+#   | __ )(_)
+#   |  _ \| |
+#   | |_) | |
+#   |____// |
+#       |__/
+####################################################################
 beijing:
   address: 中国科学院中关村园区教学楼
   address_en: "Teaching Building at Zhongguancun Campus, CAS"
@@ -46,7 +54,13 @@ beijing:
       topic_en: Intermission
     - time: "17:20"
       topic: TBD
-
+####################################################################
+#    ____  _   _
+#   / ___|| | | |
+#   \___ \| |_| |
+#    ___) |  _  |
+#   |____/|_| |_|
+####################################################################
 shanghai:
   address: 上海市浦东新区博云路2号
   address_en: "No.2 Boyun Road, Pudong, Shanghai"
@@ -80,6 +94,14 @@ shanghai:
     - { time: "17:20", speaker: id_lifeilin }
     - { time: "17:50", speaker: id_wangjianfeng }
 
+####################################################################
+#   珠三角
+#    ______   _
+#   |__  / | | |
+#     / /| |_| |
+#    / /_|  _  |
+#   /____|_| |_|
+####################################################################
 zhuhai:
   address: 珠海吉大 景山路 莲山巷8号 金山软件大厦
   address_en: Jinshan Software Building, No.8 Lianshan Road, Jingshan road, Xiangzhou, Zhuhai
@@ -114,6 +136,12 @@ zhuhai:
       topic: 现场认领
       topic_en: TBD
 
+####################################################################
+#   / ___|__  /
+#   \___ \ / /
+#    ___) / /_
+#   |____/____|
+####################################################################
 suzhou:
   address: 待定
   address_en: TBD
@@ -130,6 +158,14 @@ suzhou:
   afternoon:
     - { time: "14:30", speaker: id_weizeren }
 
+####################################################################
+#   杭州
+#    _   _ _____
+#   | | | |__  /
+#   | |_| | / /
+#   |  _  |/ /_
+#   |_| |_/____|
+####################################################################
 hangzhou:
   address: 杭州市滨江区江南大道‎ 
   address_en: 杭州市滨江区江南大道‎
