--- a/src/data/_sponsors.yaml
+++ b/src/data/_sponsors.yaml
@@ -161,7 +161,7 @@
   level: bronze
   logo: http://lxneng.qiniudn.com/qisense-logo.png?imageView2/2/w/200
   link: http://www.qisense.com/
-  intro: "七感科技 (Qisense) 将复杂的数据简单化,旨在从海量数据中智能提炼重要信息. 我们利用高级数学理论和统计模型进行分析计算,通过数据可视化向用户推送及时的,有价值的,并且可执行的商业情报."
+  intro: "菜根科技(Qisense)处于中国数据分析,机器学习和数据可视化的前沿. 通过对先进的数学模型和尖端技术的研究与运用,我们从海量数据中收集并迅速提炼出具有商业价值的智能信息;母公司25年行业领先的经验帮助我们最好地辨识商业价值链中的特殊联系,使我们可以通过数据的整合,深入的分析以及深厚的领域知识帮助客户实现最大商业价值. 我们的产品适用于多种数据类型,并能够迅速将原始数据转化为有意义的信息. "
   intro_en: "Qisense can simplifying complex data , Aimed at intelligent extract important information from the huge amounts of data. We use advanced mathematical theory and statistical models for analysis and calculation, To the user through data visualization push timely and valuable, executable business intelligence."
 -
   level_bronze: 1
