--- a/src/data/_agenda.yaml
+++ b/src/data/_agenda.yaml
@@ -19,41 +19,41 @@ beijing:
     - time: "09:00"
       topic: "签到 & 开场"
       topic_en: "Check-in & Opening"
-    - { time: "09:45", speaker: id_xutao }
-    - { time: "10:25", speaker: id_zhengkun }
-    - { time: "11:05", speaker: id_dongwei }
-    - { time: "11:45", speaker: id_gaochitao }
+    - { time: "~ 09:45", speaker: id_xutao }
+    - { time: "~ 10:25", speaker: id_zhengkun }
+    - { time: "~ 11:05", speaker: id_dongwei }
+    - { time: "~ 11:45", speaker: id_gaochitao }
   noon:
-    - time: "12:00"
+    - time: "12:00 ~ 13:00"
       topic: 午餐+合照
       topic_en: Lunch + Photo
   afternoon:
-    - { time: "13:10", speaker: id_wangwei }
-    - { time: "13:50", speaker: id_laike9m }
-    - { time: "14:30", speaker: id_weizeren }
-    - { time: "15:00", speaker: id_linshuai }
-    - time: "15:10 "
+    - { time: "~ 13:10", speaker: id_wangwei }
+    - { time: "~ 13:50", speaker: id_laike9m }
+    - { time: "~ 14:30", speaker: id_weizeren }
+    - { time: "~ 15:00", speaker: id_linshuai }
+    - time: "~ 15:10 "
       topic: 间歇
       topic_en: Intermission
   lightening_talks:
-    - { time: "15:20", speaker: id_quchifeng }
-    - { time: "15:30", speaker: id_chenjian }
-    - { time: "15:40", speaker: id_likuan }
-    - { time: "15:50", speaker: id_liangjie }
-    - { time: "16:00", speaker: id_quxiaolong }
-    - time: "16:10 "
+    - { time: "~ 15:20", speaker: id_quchifeng }
+    - { time: "~ 15:30", speaker: id_binux }
+    - { time: "~ 15:40", speaker: id_chenjian }
+    - { time: "~ 15:50", speaker: id_likuan }
+    - { time: "~ 16:00", speaker: id_liangjie }
+    - time: "~ 16:10 "
       topic: 间歇
       topic_en: Intermission
-    - { time: "16:20", speaker: id_yanglin }
-    - { time: "16:30", speaker: id_binux }
-    - { time: "16:40", speaker: id_liuxiaoming }
-    - { time: "16:50", speaker: id_luozhicheng }
-    - { time: "17:00", speaker: id_kanglei }
-    - time: "17:10 "
+    - { time: "~ 16:20", speaker: id_quxiaolong }
+    - { time: "~ 16:30", speaker: id_yanglin }
+    - { time: "~ 16:40", speaker: id_liuxiaoming }
+    - { time: "~ 16:50", speaker: id_luozhicheng }
+    - { time: "~ 17:00", speaker: id_kanglei }
+    - time: "~ 17:10"
       topic: 间歇
       topic_en: Intermission
-    - time: "17:20"
-      topic: TBD
+    - time: "~ 18:10"
+      topic: 闪电演讲,现场抢注,五分钟一节,能有8/9节
 ####################################################################
 #    ____  _   _
 #   / ___|| | | |
@@ -113,27 +113,33 @@ zhuhai:
   date: 2014-11-15 09:30~18:05
   morning:
     - time: "09:30"
-      topic: 开场+签到
-      topic_en: "Open & Check-in"
-    - { time: "11:00", speaker: id_wengwei }
-    - { time: "11:50", speaker: id_huangyi }
+      topic: 开场
+      topic_en: "Open"
+    - time: "~ 10:00"
+      topic: 签到
+      topic_en: "Check-in"
+    - time: "~ 10:15"
+      topic: 暖场 (大妈)
+      topic_en: "Starting"
+    - { time: "~ 11:00", speaker: id_wengwei }
+    - { time: "~ 11:50", speaker: id_huangyi }
   noon:
     - time: "11:55-13:00"
       topic: 午餐+合照
       topic_en: Lunch+Photo
   afternoon:
-    - { time: "13:45", speaker: id_panjunyong }
-    - { time: "14:00", speaker: id_wanganyu }
-    - { time: "14:30", speaker: id_taowen }
-    - { time: "15:00", speaker: id_weizeren }
-    - { time: "15:30", speaker: id_mengfanliang }
-    - { time: "16:30", speaker: id_wenming }
-    - { time: "16:50", speaker: id_wuzhangjin }
-    - { time: "17:15", speaker: id_longlimin }
-    - { time: "17:30", speaker: id_jeff }
+    - { time: "~ 13:45", speaker: id_panjunyong }
+    - { time: "~ 14:00", speaker: id_wanganyu }
+    - { time: "~ 14:30", speaker: id_taowen }
+    - { time: "~ 15:00", speaker: id_weizeren }
+    - { time: "~ 15:30", speaker: id_mengfanliang }
+    - { time: "~ 16:30", speaker: id_wenming }
+    - { time: "~ 16:50", speaker: id_wuzhangjin }
+    - { time: "~ 17:15", speaker: id_longlimin }
+    - { time: "~ 17:30", speaker: id_jeff }
   lightening_talks:
-    - time: "~ 17:35" 
-      topic: 现场认领
+    - time: "~ 18:10" 
+      topic: 闪电演讲,现场抢注,五分钟一节,能有6/7节
       topic_en: TBD
 
 ####################################################################
