--- a/src/data/_message.yaml
+++ b/src/data/_message.yaml
@@ -22,14 +22,14 @@ page_title_hangzhou_en: Schedule in Hangzhou
 #########################################
 # home
 #########################################
-home_title: PyCon2014China 来了!
+home_title: 中国PyCon 2014大会准备好了!
 home_title_en: PyCon2014China is Coming!
 home_intro: > 
-  世界 <a href="volunteers.html#pythoneer">Pythoneer</a> 的品牌盛会PyCon! 
-  由<a href="https://www.python.org/psf/about/">Python软件基金会</a>下的
-  <strong><a href="http://PyCon.org">PyCon.org</a></strong>授权中国举办
-  第四届 PyConChina 大会. 本次大会由CPyUG,GDG,TopGeek在
-  上海,北京,珠海,杭州,苏州同时举办.<ul>
+  <b>PyCon</b> 是全球 <a href="volunteers.html#pythoneer">Pythoneer</a> 最盛大的年度聚会,由 <a href="https://www.python.org/psf/about/">PSF(Python 基金会)</a>支持,致力于营造愉快的多元化的 Python 技术主题大会.
+  PyConChina 是由 <a href="http://wiki.woodpecker.org.cn/moin/CPUG">CPyUG(华蠎用户组)</a>获得授权举办的 <b>中国PyCon</b> 年会.
+  迄今已是<b>第四届</b>, 继续由 CPyUG/TopGeek/GDG 协同,在 <b>北京/上海/珠海/苏州/杭州</b> 五城联办.
+  无论使用哪种,都可以/应该参加这场完全由社区组织的欢乐集会;-)
+  <ul>
   <li><strong><a href="/proposals.html">主题/工作坊提交入口</a></strong></li>
   <li>门票策略: <ul>
   <li>0RMB    学生票, 含所有礼品/茶点/午餐 <sup>为支持学生,嘦有效学生证即可入场,但也要预订门票以便统计人数吼;-)</sup></li>
