顺手解决翁伟头像链接错误

--- a/src/data/_speakers.yaml
+++ b/src/data/_speakers.yaml
@@ -503,7 +503,7 @@ id_wengwei:
   city_zhuhai: 1
   city: 珠海
   city_en: Zhuhai
-  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/wuvist.jpghttp://pyconcn.qiniudn.com/zoomquiet/stuff14/id/wuvist.jpg?imageMogr2/crop/!700x700a0a70|imageView2/2/h/80
+  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/wuvist.jpg?imageMogr2/crop/!700x700a0a70|imageView2/2/h/80
   intro: 80后创业者,今年沉迷于使用python生成Go源码
   intro_en: Entrepreneurs, hooked on generating Go source code with python this year
   topic: 
