--- a/src/data/_agenda.yaml
+++ b/src/data/_agenda.yaml
@@ -18,40 +18,44 @@ beijing:
   morning:
     - time: "09:00"
       topic: "签到 & 开场"
-      topic_en: "Check-in & Opening"
-    - { time: "~ 09:45", speaker: id_xutao }
-    - { time: "~ 10:25", speaker: id_zhengkun }
-    - { time: "~ 11:05", speaker: id_dongwei }
-    - { time: "~ 11:45", speaker: id_gaochitao }
+      topic_en: "Check-in"
+    - time: "09:30 ~ "
+      topic: "开场"
+      topic_en: "Opening"
+    - { time: "09:45 ~ 10:20", speaker: id_xutao }
+    - { time: "10:25 ~ 11:05", speaker: id_zhengkun }
+    - { time: "11:05 ~ 11:45", speaker: id_dongwei }
+    - { time: "11:45 ~ 12:15", speaker: id_gaochitao }
   noon:
-    - time: "12:00 ~ 13:00"
+    - time: "12:15 ~ 13:00"
       topic: 午餐+合照
       topic_en: Lunch + Photo
   afternoon:
-    - { time: "~ 13:10", speaker: id_wangwei }
-    - { time: "~ 13:50", speaker: id_laike9m }
-    - { time: "~ 14:30", speaker: id_weizeren }
-    - { time: "~ 15:00", speaker: id_linshuai }
-    - time: "~ 15:10 "
-      topic: 间歇
+    - { time: "13:10 ~ 13:50", speaker: id_wangwei }
+    - { time: "13:50 ~ 14:30", speaker: id_laike9m }
+    - { time: "14:30 ~ 15:00", speaker: id_weizeren }
+    - { time: "15:00 ~ 15:10", speaker: id_linshuai }
+    - time: "15:10 ~ "
+      topic: 茶歇
       topic_en: Intermission
   lightening_talks:
-    - { time: "~ 15:20", speaker: id_quchifeng }
-    - { time: "~ 15:30", speaker: id_chenjian }
-    - { time: "~ 15:40", speaker: id_likuan }
-    - { time: "~ 15:50", speaker: id_liangjie }
-    - time: "~ 16:00 "
-      topic: 间歇
+    - { time: "15:20 ~ ", speaker: id_quchifeng }
+    - { time: "15:30 ~ ", speaker: id_chenjian }
+    - { time: "15:40 ~ ", speaker: id_likuan }
+    - { time: "15:50 ~ ", speaker: id_liangjie }
+    - time: "16:00 ~"
+      topic: 茶歇
       topic_en: Intermission
-    - { time: "~ 16:10", speaker: id_quxiaolong }
-    - { time: "~ 16:20", speaker: id_yanglin }
-    - { time: "~ 16:30", speaker: id_liuxiaoming }
-    - { time: "~ 16:40", speaker: id_luozhicheng }
-    - { time: "~ 16:50", speaker: id_kanglei }
-    - time: "~ 17:00"
-      topic: 间歇
+    - { time: "16:05 ~", speaker: id_quxiaolong }
+    - { time: "16:15 ~", speaker: id_yanglin }
+    - { time: "16:25 ~", speaker: id_liuxiaoming }
+    - { time: "16:35 ~", speaker: id_luozhicheng }
+    - time: "16:45 ~"
+      topic: 茶歇
       topic_en: Intermission
-    - { time: "~ 17:10", speaker: id_binux }
+    - { time: "16:50 ~", speaker: id_kanglei }
+    - { time: "17:00 ~", speaker: id_binux }
+    - { time: "17:10 ~", speaker: id_caibin }
     - time: "~ 18:10"
       topic: 闪电演讲,现场抢注,五分钟一节,能有8/9节
 ####################################################################
@@ -112,34 +116,37 @@ zhuhai:
   notices: Lightning Talking ~ 闪电演讲使用极限模式/ 中午报名,每节10分钟,不用幻灯,到点下台!
   date: 2014-11-15 09:30~18:05
   morning:
-    - time: "09:30"
-      topic: 开场
-      topic_en: "Open"
-    - time: "~ 10:00"
+    - time: "09:30 ~ "
       topic: 签到
       topic_en: "Check-in"
-    - time: "~ 10:15"
+    - time: "10:00 ~ "
       topic: 暖场 (大妈)
       topic_en: "Starting"
-    - { time: "~ 11:00", speaker: id_wengwei }
-    - { time: "~ 11:50", speaker: id_huangyi }
+    - { time: "10:15 ~", speaker: id_wengwei }
+    - { time: "11:00 ~ ", speaker: id_huangyi }
   noon:
-    - time: "11:55-13:00"
+    - time: "11:50 ~ 13:00"
       topic: 午餐+合照
       topic_en: Lunch+Photo
   afternoon:
-    - { time: "~ 13:45", speaker: id_panjunyong }
-    - { time: "~ 14:00", speaker: id_wanganyu }
-    - { time: "~ 14:30", speaker: id_taowen }
-    - { time: "~ 15:00", speaker: id_weizeren }
-    - { time: "~ 15:30", speaker: id_mengfanliang }
-    - { time: "~ 16:30", speaker: id_wenming }
-    - { time: "~ 16:50", speaker: id_wuzhangjin }
-    - { time: "~ 17:15", speaker: id_longlimin }
-    - { time: "~ 17:30", speaker: id_jeff }
+    - { time: "13:00 ~", speaker: id_panjunyong }
+    - { time: "13:40 ~", speaker: id_wanganyu }
+    - { time: "13:55 ~", speaker: id_taowen }
+    - { time: "14:30 ~", speaker: id_weizeren }
+    - time: "15:00 ~ 15:05"
+      topic: 茶歇
+      topic_en: Intermission
+    - { time: "15:05 ~", speaker: id_mengfanliang }
+    - { time: "15:45 ~", speaker: id_wenming }
+    - { time: "16:25 ~", speaker: id_wuzhangjin }
+    - { time: "17:05 ~", speaker: id_longlimin }
+    - time: "17:05 ~ 17:10"
+      topic: 茶歇
+      topic_en: Intermission
+    - { time: "17:10 ~", speaker: id_jeff }
   lightening_talks:
     - time: "~ 18:10" 
-      topic: 闪电演讲,现场抢注,五分钟一节,能有6/7节
+      topic: 闪电演讲,现场抢注,五分钟一节,能有3~4节
       topic_en: TBD
 
 ####################################################################
@@ -162,7 +169,10 @@ suzhou:
       topic: 签到
       topic_en: Check in
   afternoon:
-    - { time: "14:30", speaker: id_weizeren }
+    - { time: "14:30~15:00", speaker: id_weizeren }
+    - { time: "15:00~", speaker: id_baoyongcheng }
+    - { time: "15:45~", speaker: id_laoqi }
+    - { time: "15:50~", speaker: id_juzheng }
 
 ####################################################################
 #   杭州
